알림 중복 제거 기능